--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-firebase": "^2.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-toast-notifications": "^2.4.0",
+    "react-toastify": "^6.1.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
