--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.0",
     "react-toast-notifications": "^2.4.0",
     "react-toastify": "^6.1.0",
+    "react-tooltip": "^4.2.10",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
